Better indentations in the Table of Contents

--- a/src/ogma_theme/assets/bass.css
+++ b/src/ogma_theme/assets/bass.css
@@ -139,7 +139,7 @@
 .pt1{ padding-top: .5rem }
 .pr1{ padding-right: .5rem }
 .pb1{ padding-bottom: .5rem }
-.pl1{ padding-left: .5rem }
+.pl1{ padding-left: 2rem }
 .py1{ padding-top: .5rem; padding-bottom: .5rem }
 .px1{ padding-left: .5rem; padding-right: .5rem }
 
